--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,12 @@
     box-sizing: border-box;
   }
 
+.homeFlexContainer,
+.quizFlexContainer,
+.resultsFlexContainer {
+  display: flex;
+}
+
+@media screen and (min-width:789px) {
+
+}
