--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,7 @@ button:hover, .primary-button:hover {
 
 .homeFlexContainer,
 .nameFlexContainer,
+.resultsFlexContainer,
 .quizFlexContainer {
   display: flex;
   min-height:100vh;
@@ -394,7 +395,6 @@ label {
 }
 
 .resultsFlexContainer{
-  display: flex;
   flex-direction: column; 
 }
 
