Revert "Switching a line"
This reverts commit 120ffa52c39b33179d993a22c4e4bcf4de174970.

--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,6 @@ button:hover, .primary-button:hover {
 
 .homeFlexContainer,
 .nameFlexContainer,
-.resultsFlexContainer,
 .quizFlexContainer {
   display: flex;
   min-height:100vh;
@@ -395,6 +394,7 @@ label {
 }
 
 .resultsFlexContainer{
+  display: flex;
   flex-direction: column; 
 }
 
