--- a/styles.css
+++ b/styles.css
@@ -348,13 +348,13 @@ label {
   margin: 4vh auto;
 }
 .quizzTheme:nth-child(1) {
-  background-image: url("https://picsum.photos/200");
+  background-image: url("/assets/logoquizz1.png");
 }
 .quizzTheme:nth-child(2) {
-  background-image: url("https://picsum.photos/300");
+  background-image: url("/assets/logoquizz2.png");
 }
 .quizzTheme:nth-child(3) {
-  background-image: url("https://picsum.photos/400");
+  background-image: url("/assets/logoquizz3.png");
 }
 
 /*///////////////////
