improved launch quiz button with disable state if no theme is selected

--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,27 @@ button, .primary-button{
   position: relative;
   transition: all 0.3s;
  }
+
+ .neonButton:disabled {
+  --glow-color: rgba(217, 176, 255, 0.26);
+  --glow-spread-color: rgba(191, 123, 255, 0.226);
+  --enhanced-glow-color: rgba(231, 206, 255, 0.082);
+  --btn-color: rgba(100, 61, 136, 0.253);
+  /* border: .25em solid var(--glow-color); */
+  padding: 1em 3em;
+  color: var(--glow-color);
+  font-size: 15px;
+  font-weight: bold;
+  /* background-color: var(--btn-color); */
+  border-radius: 1em;
+  outline: none;
+  box-shadow: 0 0 1em .25em var(--glow-color),
+         0 0 4em 1em var(--glow-spread-color),
+         inset 0 0 .75em .25em var(--glow-color);
+  text-shadow: 0 0 .5em var(--glow-color);
+  position: relative;
+  transition: all 0.3s;
+ }
  
 #btnGlow::after {
   pointer-events: none;
