--- a/styles.css
+++ b/styles.css
@@ -496,19 +496,16 @@ button.cardButton {
 .resultsFlexContainer{
   display: flex;
   flex-direction: column;
-  /* height:90vh; */
+  margin-top: 5rem;
 }
-.resultsPage a{
 
-}
 .resultsFlexContainer article{
-  background-color: #673f92;
+  background-color: #959495;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 1vw 10vw;
-  border-radius: 2% ;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 .resultsFlexContainer article div {
@@ -518,11 +515,12 @@ button.cardButton {
   color: var(--text-primary);
   margin: 0.5rem;
 }
-.avatar {
-  border-radius: 50%;
-  height: 7vw;
-  width: 7vw;
+
+
+#quizzReturn{
+  margin : 2rem, 2rem, 2rem, 2rem; 
 }
+
 footer {
   background-color: var(--secondary-background);
 }
@@ -576,7 +574,7 @@ footer {
   .resultsFlexContainer {
     flex-direction: row;
     align-items: flex-end;
-    justify-content: space-around;
+    justify-content: center;
     margin-left: 15vw;
     margin-right: 15vw;
   }
