add text quizz theme

--- a/styles.css
+++ b/styles.css
@@ -336,6 +336,7 @@ label {
   background-size: cover;
   background-position: center;
   font-size: var(--L);
+  color: var(--text-primary);
 }
 .selected {
   border: rgb(0, 247, 255) 10px solid;  /*REMPLACER PAR VAR*/
