--- a/styles.css
+++ b/styles.css
@@ -546,29 +546,42 @@ button.cardButton {
 .resultsFlexContainer{
   display: flex;
   flex-direction: column;
-  /* height:90vh; */
+  margin-top: 6vh;
+}
+#congrats{
+  color: rgba(166,142,235,1);
+  padding-top: 2vh;
+  font-weight: 600;
+  font-size: 2vh;
+}
+#rank{
+  color: rgba(166,142,235,1);
+  font-weight: 800;
+  font-size: 2vh;
 }
 .resultsFlexContainer article{
-  background-color: #673f92;
+  background: rgb(255,39,115);
+  background: linear-gradient(90deg, rgba(255,39,115,1) 24%, rgba(166,142,235,1) 73%);
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   margin: 1vw 10vw;
-  border-radius: 2% ;
+  border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 .resultsFlexContainer article div {
-  margin: 0.5rem;
+  margin: 1vh;
 }
 .resultsFlexContainer article p {
   color: var(--text-primary);
-  margin: 0.5rem;
+  font-weight: 900;
+  font-size: 3vh;
+  margin: 1vh;
 }
 .avatar {
-  border-radius: 50%;
-  height: 7vw;
-  width: 7vw;
+  width: 10%;
+  padding-top: 0;
 }
 footer {
   background-color: var(--secondary-background);
@@ -578,7 +591,7 @@ footer {
   align-items: left;
   margin: auto auto auto 2%;
   color: beige;
-} 
+}
 
 /*/////////////////////////////
 //SECTION  : DESKTOP VERSION //
@@ -637,24 +650,25 @@ footer {
   }
   article.firstUser{
     order: 2 ;
-    padding-bottom: 10rem;
+    padding-bottom: 11vh;
   }
   article.secondUser{
     order: 1 ;
-    padding-bottom: 6rem;
+    padding-bottom: 7.5vh;
   }
   article.thirdUser{
     order: 3 ;
-    padding-bottom: rem ;
+    padding-bottom: 5vh ;
   }
   .avatar {
-    margin-top: 2rem;
+    width: 35%;
+    margin-top: 2.5vh;
   }
   .selectQuizz {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 2rem;
+    padding: 2.5vh;
   }
   button.quizzTheme {
     height: 25vh;
